--- a/reader/pom.xml
+++ b/reader/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.12.2-SNAPSHOT</version>
+        <version>3.13.0</version>
     </parent>
 
     <artifactId>jline-reader</artifactId>
