--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,12 @@
             </dependency>
 
             <dependency>
+                <groupId>org.jline</groupId>
+                <artifactId>jline-script</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.fusesource.jansi</groupId>
                 <artifactId>jansi</artifactId>
                 <version>${jansi.version}</version>
@@ -499,12 +505,13 @@
         <module>terminal-jna</module>
         <module>terminal-jansi</module>
         <module>reader</module>
+        <module>script</module>
         <module>builtins</module>
         <module>remote-ssh</module>
         <module>remote-telnet</module>
         <module>style</module>
         <module>jline</module>
         <module>demo</module>
-    </modules>
+</modules>
 
 </project>
