--- a/groovy/pom.xml
+++ b/groovy/pom.xml
@@ -25,9 +25,11 @@
         </dependency>
         <dependency>
              <groupId>org.codehaus.groovy</groupId>
-             <artifactId>groovy-all</artifactId>
+             <artifactId>groovy</artifactId>
              <version>${groovy.version}</version>
+<!-- 
              <type>pom</type>
+ -->
         </dependency>
 		<dependency>
 			<groupId>junit</groupId>
