--- a/groovy/pom.xml
+++ b/groovy/pom.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0"?>
+<!--
+
+    Copyright (c) 2002-2016, the original author or authors.
+
+    This software is distributable under the BSD license. See the terms of the
+    BSD license in the documentation provided with this software.
+
+    https://opensource.org/licenses/BSD-3-Clause
+
+-->
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0"
@@ -25,9 +35,11 @@
              <groupId>org.codehaus.groovy</groupId>
              <artifactId>groovy</artifactId>
              <version>${groovy.version}</version>
-<!-- 
-             <type>pom</type>
- -->
+        </dependency>
+        <dependency>
+             <groupId>org.codehaus.groovy</groupId>
+             <artifactId>groovy-json</artifactId>
+             <version>${groovy.version}</version>
         </dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -43,7 +55,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <showWarnings>true</showWarnings>
+                    <showWarnings>false</showWarnings>
                     <compilerArgs>
                         <arg>-Xlint:all,-options</arg>
                         <arg>-profile</arg>
