Added Groovy REPL in demo

--- a/build.config
+++ b/build.config
@@ -9,3 +9,7 @@ function command_rebuild {
 function command_demo() {
   exec demo/jline-gogo.sh $*
 }
+
+function command_repl() {
+  exec demo/jline-repl.sh $*
+}
