--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2002-2017, the original author or authors.
+    Copyright (c) 2002-2020, the original author or authors.
 
     This software is distributable under the BSD license. See the terms of the
     BSD license in the documentation provided with this software.
@@ -26,6 +26,11 @@
         <dependency>
             <groupId>org.jline</groupId>
             <artifactId>jline</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline-groovy</artifactId>
         </dependency>
 
         <dependency>
@@ -66,6 +71,16 @@
         <dependency>
             <groupId>org.apache.sshd</groupId>
             <artifactId>sshd-sftp</artifactId>
+        </dependency>
+
+        <dependency>
+             <groupId>org.codehaus.groovy</groupId>
+             <artifactId>groovy</artifactId>
+        </dependency>
+
+        <dependency>
+             <groupId>org.codehaus.groovy</groupId>
+             <artifactId>groovy-json</artifactId>
         </dependency>
 
         <dependency>
