--- a/builtins/pom.xml
+++ b/builtins/pom.xml
@@ -69,9 +69,9 @@
                             <compilerArgs>
                                 <arg>-Xlint:all,-options</arg>
                                 <arg>-Werror</arg>
-                                <arg>-profile</arg>
-                                <arg>compact3</arg>
-                            </compilerArgs>
+                                <arg>-profile</arg>  <!-- mrn 27/01/2020 -->
+                                <arg>compact3</arg>  <!-- after adding jline-groovy also TTop.java started compiling here although exclusion!! -->
+                            </compilerArgs>          <!-- changed arg compact1 to compact3 to over come compiling errors -->
                         </configuration>
                     </execution>
                     <execution>
