[maven-release-plugin] prepare release jline-parent-3.14.0

--- a/groovy/pom.xml
+++ b/groovy/pom.xml
@@ -9,15 +9,12 @@
     https://opensource.org/licenses/BSD-3-Clause
 
 -->
-<project
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-    xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.13.4-SNAPSHOT</version>
+        <version>3.14.0</version>
     </parent>
     <artifactId>jline-groovy</artifactId>
     <name>JLine Groovy</name>
