--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <artifactId>jline-parent</artifactId>
     <name>JLine Parent</name>
     <description>JLine</description>
-    <version>3.14.1-SNAPSHOT</version>
+    <version>3.14.1</version>
     <packaging>pom</packaging>
 
     <licenses>
@@ -38,7 +38,7 @@
         <connection>scm:git:git://github.com/jline/jline3.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/jline/jline3.git</developerConnection>
         <url>http://github.com/jline/jline3</url>
-    <tag>HEAD</tag>
+    <tag>jline-parent-3.14.1</tag>
   </scm>
 
     <issueManagement>
@@ -361,6 +361,7 @@
                         </mapping>
                     </configuration>
                 </plugin>
+
             </plugins>
         </pluginManagement>
 
