GroovyCommand: added command console & inspect command option --gui

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -84,6 +84,11 @@
         </dependency>
 
         <dependency>
+             <groupId>org.codehaus.groovy</groupId>
+             <artifactId>groovy-console</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
