--- a/groovy/pom.xml
+++ b/groovy/pom.xml
@@ -33,6 +33,11 @@
              <artifactId>groovy-json</artifactId>
         </dependency>
         <dependency>
+             <groupId>org.codehaus.groovy</groupId>
+             <artifactId>groovy-console</artifactId>
+             <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
