GroovyCommand: added grap command

--- a/groovy/pom.xml
+++ b/groovy/pom.xml
@@ -38,6 +38,11 @@
              <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>org.apache.ivy</groupId>
+            <artifactId>ivy</artifactId>
+            <optional>true</optional>
+        </dependency>        
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
