--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -89,6 +89,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.ivy</groupId>
+            <artifactId>ivy</artifactId>
+        </dependency>        
+
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
