--- a/jline/pom.xml
+++ b/jline/pom.xml
@@ -294,6 +294,7 @@
                         <configuration>
                             <excludes>
                                 <exclude>**/TTop.java</exclude>
+                                <exclude>**/ConsoleEngineImpl.java</exclude>
                             </excludes>
                             <compilerArgs>
                                 <arg>-Xlint:all,-options</arg>
@@ -311,12 +312,11 @@
                         <configuration>
                             <includes>
                                 <include>**/TTop.java</include>
+                                <include>**/ConsoleEngineImpl.java</include>
                             </includes>
                             <compilerArgs>
                                 <arg>-Xlint:all,-options</arg>
                                 <arg>-Werror</arg>
-                                <arg>-profile</arg>
-                                <arg>compact3</arg>
                             </compilerArgs>
                         </configuration>
                     </execution>
