GraalVM: added graal command in build.config

--- a/build.config
+++ b/build.config
@@ -13,3 +13,7 @@ function command_demo() {
 function command_repl() {
   exec demo/jline-repl.sh $*
 }
+
+function command_graal() {
+  exec demo/target/graal $*
+}
