Adding automatic module name

--- a/pom.xml
+++ b/pom.xml
@@ -445,6 +445,9 @@
                 <configuration>
                     <archive>
                         <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+						<manifestEntries>
+                            <Automatic-Module-Name>org.jline</Automatic-Module-Name>
+                        </manifestEntries>
                     </archive>
                 </configuration>
             </plugin>
