--- a/groovy/pom.xml
+++ b/groovy/pom.xml
@@ -19,6 +19,11 @@
     <artifactId>jline-groovy</artifactId>
     <name>JLine Groovy</name>
     <url>http://maven.apache.org</url>
+
+    <properties>
+        <automatic.module.name>org.jline.groovy</automatic.module.name>
+    </properties>
+
     <dependencies>
          <dependency>
             <groupId>org.jline</groupId>
