--- a/remote-ssh/pom.xml
+++ b/remote-ssh/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2002-2017, the original author or authors.
+    Copyright (c) 2002-2020, the original author or authors.
 
     This software is distributable under the BSD license. See the terms of the
     BSD license in the documentation provided with this software.
@@ -21,6 +21,10 @@
 
     <artifactId>jline-remote-ssh</artifactId>
     <name>JLine Remote SSH</name>
+
+    <properties>
+        <automatic.module.name>org.jline.remote.ssh</automatic.module.name>
+    </properties>
 
     <dependencies>
         <dependency>
