--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <artifactId>jline-parent</artifactId>
     <name>JLine Parent</name>
     <description>JLine</description>
-    <version>3.14.2-SNAPSHOT</version>
+    <version>3.15.0</version>
     <packaging>pom</packaging>
 
     <licenses>
@@ -38,7 +38,7 @@
         <connection>scm:git:git://github.com/jline/jline3.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/jline/jline3.git</developerConnection>
         <url>http://github.com/jline/jline3</url>
-    <tag>HEAD</tag>
+    <tag>jline-parent-3.15.0</tag>
   </scm>
 
     <issueManagement>
@@ -79,7 +79,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <native.image.skip>true</native.image.skip>
-        <automatic.module.name></automatic.module.name>
+        <automatic.module.name />
 
         <jna.version>5.3.1</jna.version>
         <jansi.version>1.18</jansi.version>
