Also test with jdk 14

--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -56,7 +56,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest ]
-        java: [ '1.8', '11' ]
+        java: [ '1.8', '11', '14' ]
     steps:
       - uses: actions/checkout@v2
 
